--- a/klasa 3/listy/makefile
+++ b/klasa 3/listy/makefile
@@ -1,8 +1,8 @@
 CXX=g++
 CXXFLAGS=-Wall -I.
-OBJS=lista.o main.o
+OBJS=lista.o stos.o main.o
 
-pong: lista.o main.o
+pong: lista.o stos.o main.o
 	$(CXX) $(CXXFLAGS) $(OBJS) -o main.exe
 	
 .PHONY: clean
